tests/neg-custom-args/captures/usingLogFile.check
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:23:27 ------------------------------------------------------
23 |  val later = usingLogFile { f => () => f.write(0) } // error
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              The expression's type box {*} () -> Unit is not allowed to capture the root capability `*`.
   |              This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:29:9 -------------------------------------------------------
29 |  later2.x()  // error
   |  ^^^^^^^^
   |  The expression's type box {*} () -> Unit is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:31:6 -------------------------------------------------------
31 |  var later3: () => Unit = () => ()  // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  The mutable variable's type box {*} () -> Unit is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:37:9 -------------------------------------------------------
37 |  later4.x() // error
   |  ^^^^^^^^
   |  The expression's type box {*} () -> Unit is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:47:27 ------------------------------------------------------
47 |  val later = usingLogFile { f => () => f.write(0) } // error
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              The expression's type box {*} () -> Unit is not allowed to capture the root capability `*`.
   |              This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:62:25 ------------------------------------------------------
62 |    val later = usingFile("out", f => (y: Int) => xs.foreach(x => f.write(x + y))) // error
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             The expression's type box {*} (x$0: Int) -> Unit is not allowed to capture the root capability `*`.
   |             This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/usingLogFile.scala:71:25 ------------------------------------------------------
71 |    val later = usingFile("logfile", usingLogger(_, l => () => l.log("test"))) // error
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                The expression's type box {*} () -> Unit is not allowed to capture the root capability `*`.
   |                This usually means that a capability persists longer than its allowed lifetime.
